--- a/lab02/Zober-bio.html
+++ b/lab02/Zober-bio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> lang="en">
+<html lang="en">
     <head>
         <metacharset="utf-8">
         <title>Sophie Zober-bio</title>
